tests/negative/test_type_attr_multi.orb
fnc main () () {
    sym x:i32:i32;
};